--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "author": "Digitální a informační agentura",
   "license": "MIT",
   "dependencies": {
+    "@fastify/cors": "^8.4.1",
+    "@fastify/static": "^6.12.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "handlebars": "^4.7.8",
     "pino": "^8.16.1",
+    "pino-pretty": "^10.2.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "@fastify/static": "^6.12.0",
-    "pino-pretty": "^10.2.3"    
+    "typescript": "^5.2.2"
   }
 }
