Fix start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Catalog component of Nation Data Catalog.",
   "type": "module",
   "scripts": {
-    "start": "tsx ./server/server.mjs",
+    "start": "tsx ./server/server.ts",
     "test": "tsc && node --test",
     "lint": "eslint . --fix"
   },
