--- a/package.json
+++ b/package.json
@@ -11,27 +11,29 @@
   "author": "Digitální a informační agentura",
   "license": "MIT",
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
-    "@fastify/static": "^7.0.4",
-    "@types/node": "^20.14.11",
+    "@fastify/cors": "^11.0.1",
+    "@fastify/static": "^8.2.0",
+    "@types/node": "^24.1.0",
     "@types/pino": "^7.0.5",
-    "dotenv": "^16.4.5",
-    "fastify": "^4.28.1",
+    "dotenv": "^17.2.0",
+    "fastify": "^5.4.0",
     "handlebars": "^4.7.8",
-    "jsonld": "^8.3.2",
-    "node-cron": "^3.0.3",
-    "pino": "^9.3.1",
-    "pino-pretty": "^11.2.1",
-    "tsx": "^4.16.2",
-    "typescript": "^5.5.3",
-    "zod": "^3.23.8"
+    "jsonld": "^8.3.3",
+    "node-cron": "^4.2.1",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
+    "tsx": "^4.20.3",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3"
+    "@eslint/js": "^9.31.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
+    "prettier": "^3.6.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0"
   }
 }
